# local-mcp

./: README.md  client.py  pyproject.toml  server.py  x.md
api-mcp/: README.md  api_service.py  requirements.txt
mcp/: client.py
mcp-proejct/: __init__.py  server.py
mcp-proejct/common/: errors.py  types.py  utils.py
mcp-proejct/operations/: __init__.py  posts.py  users.py
mpc-postgres/: client.py  pyproject.toml  server.py
