[project]
name = "llamaindex-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.2.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "linkup-sdk>=0.2.4",
    "llama-index>=0.12.30",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.1",
    "mcp[cli]>=1.6.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "trio>=0.30.0",
    "uvicorn>=0.34.0",
]
